--- a/README
+++ b/README
@@ -36,6 +36,7 @@ Goal of this project:
   programmed player (AI?).
 
 Future goals:
+* File configurable population of Kingdom cards in Supply 
 * Automatic player with file configurable strategies. (not hard coded)
 * AI player with machine learning.
 * Implementation of all cards and mechanics of the Dominon.  
@@ -45,9 +46,9 @@ Future goals:
   programatically driven by the player implementations from this project.
 
 Other thoughts:
-* File configurable cards would be desireable, but due to the complex
-  effects of many cards on the game state and the compiled nature of 
-  C++ there would be significant trade-offs and probable performance
+* File configurable card definitions would be desireable, but due to the 
+  complex effects of many cards on the game state and the compiled nature 
+  of C++ there would be significant trade-offs and probable performance
   degradation. Since one of the design goals is fast simulation
   it was decided to implement card definitions in compiled source.
   
